# shiroi_dainaso

./: .gitignore  CMakeLists.txt  README.md  assets_bundle.h  cactus.h  cloud.h  cloud_spawner.h  dinosaur.h  dune.h  dune_spawner.h  floor.h  game_context.h  game_object.h  macros.h  main.c  obstacle_spawner.h  pterodactyl.h  scene.h  scene_decl.h  score_counter.h  scrolling_object.h  spawner.h  stone.h  stone_spawner.h  text.h  util.h
docs/: index.html  prism.css  prism.js  style.css
overview/: overview.html
